fix(styles): change overflow property for .underline_custom class

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -750,7 +750,7 @@
 
 	/* Slide in */
 	.underline_custom {
-		height: 3rem;
+		overflow: auto;
 	}
 
 	/*** icon animation ***/
